<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:id="@+id/layoutLogSign"
    tools:context="com.example.chcurmont.projetandroid.LoginOrSignInFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogInButton"
        android:onClick="login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_alignTop="@+id/buttonLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogIn"
        android:layout_alignStart="@+id/buttonLogIn"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="47dp"
        android:text="@string/RegisterButton"
        android:onClick="signin"/>
</RelativeLayout>
